# qasql-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
qasql/: __init__.py  config.py  database.py  engine.py  tui.py
